objects/Audit__c.object
<CustomObject>
    <description>Description to not be deployed 1</description>
    <fields>
        <fullName>AgreementPartnerCommission2__c</fullName>
        <label>AgreementPartnerCommission2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementPartnerCommission__c</fullName>
        <label>AgreementPartnerCommission</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Audit</label>
    <nameField>
        <label>Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>